# courseworkk

./: CMakeLists.txt  README.md
glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Glad.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters
glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
glfw/docs/: Doxyfile  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  docs.vcxproj  docs.vcxproj.filters
glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
glfw/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cmake_install.cmake  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  inputlag.vcxproj  inputlag.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  monitors.vcxproj.filters  msaa.vcxproj  msaa.vcxproj.filters  opacity.vcxproj  opacity.vcxproj.filters  reopen.vcxproj  reopen.vcxproj.filters  tearing.vcxproj  tearing.vcxproj.filters  threads.vcxproj  threads.vcxproj.filters  timeout.vcxproj  timeout.vcxproj.filters  (+6 more)
include/: Camera.h  ShaderProgram.h  main.cpp
stb/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Stb.sln  cmake_install.cmake  stb.vcxproj  stb.vcxproj.filters
(+21 files in other folders)
